--- a/sdk/android_sdk/SDK/res/values/strings.xml
+++ b/sdk/android_sdk/SDK/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="hello">Hello World, MobclickAgent!</string>
-    <string name="app_name">UMS</string>
+    <string name="app_name" translatable="false">UMS</string>
 
 </resources>
