--- a/sdk/android_sdk/SDK/res/values/strings.xml
+++ b/sdk/android_sdk/SDK/res/values/strings.xml
@@ -3,5 +3,8 @@
 
     <string name="hello">Hello World, MobclickAgent!</string>
     <string name="app_name" translatable="false">UMS</string>
+    <string name="title_activity_user_indentification">UserIndentificationActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
